<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home">首页</string>
    <string name="app_name">知多少</string>
    <string name="action_settings">菜单</string>
    <string name="back">返回</string>
    <string name="study">开始答题</string>
    <string name="note">收藏笔记</string>
    <string name="more">更多</string>
    <string name="suggestions">反馈建议</string>
    <string name="Last">上一页</string>
    <string name="Next">下一页</string>
    <string name="title">选择的</string>
    <string name="sug">提交建议</string>
    <string name="content">内容：</string>
    <string name="send">发送</string>
    <string name="menu_name">菜单</string>
    <string name="exit">我要休息</string>
    <string name="about">关于我们</string>
    <string name="model">答题统计</string>
   	<string name="search">搜索题目</string>
   	<string name="help">查看帮助</string>
    <string name="record">历史记录</string>
    <string name="about_title">(关于)</string>
    <string name="search_title">(搜索)</string>
    <string name="study_title">(答题)</string>
    <string name="note_title">(笔记)</string>
    <string name="sug_title">(建议)</string>
    <string name="record_title">(历史)</string>
    <string name="help_title">(帮助)</string>
    <string name="stat_title">(纪录)</string>
    <string name="name">您的名字及联系方式(可不填)：</string>
    <string name="your_sug">您的建议：</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="set">设置</string>
    <string name="add_notebook">添加笔记本</string>
    <string name="notebook_name">笔记本：</string>
    <string name="choose_pic">选择封面：</string>
    <string name="change_pic">修改封面：</string>
    <string name="choose_as_default">设为默认笔记本：</string>
    <string name="choose">选择</string>
    <string name="to_note">收藏至笔记</string>
    <string name="select_notebook">选择收藏的笔记本：</string>
    <string name="confirm_note">收藏</string>
    <string name="to_see_answer">去看看为什么</string>
    <string name="your_answer">您的选择</string>
    <string name="answer">解释</string>
    <string name="titles">题目</string>
    <string name="search_by_content">按内容搜索</string>
    <string name="search_by_title">按标题搜索</string>
    <string name="change_notebook">修改</string>
    <string name="deletes">删除</string>
    <string name="delete">删除笔记本</string>
    <string name="version">当前版本:1.0</string>
    <string name="for_device">(For android 4.0及以上系统)</string>
    <string name="team_right">雨中树团队         版权所有</string>
    <string name="team_right_e">Copyright @TreeInRain All Rights Reserved</string>
    <string name="state">申明</string>
    <string name="my_state">改版本适用于Android 4.0及以上固件的设备，如在其他版本或系统上使用本软件，可能会出现功能故障、画面不适配等问题，请注意使用。本软件下载、安装完全免费，使用过程中产生的数据流量（仅提交建议时会产生），费用由运营商收取，请尽可能在Wifi环境下提交您的建议。</string>
    <string name="tips">如有任何使用上的问题或内容的更新建议，请前往菜单->建议，并写下您的建议（需使用网络），感谢您的使用与参与！</string>
    <string name="team">雨中树团队   2014年05月20日   致上</string>
    <string name="next_content">下一题</string>
    <string name="wrong_set">查看错题集</string>
    <string name="delete_wrong_set">清空错题集</string>
    <string name="delete_stat">清空答题信息</string>
    <string name="today_stat">今日答题情况：</string>
    <string name="best_stat">最佳一日成绩：</string>
    <string name="total_answer">总共答题目数：</string>
    <string name="total_right">总共答对题目：</string>
    <string name="total_wrong">总共答错题目：</string>
    <string name="iknow">我知道了</string>
    
</resources>
