<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fcfae1" >

        <TextView
            style="@style/dialog_title"
            android:id="@+id/textView1"
            android:text="@string/add_notebook" />

    </LinearLayout>
	
    <LinearLayout style="@style/dialog"
        android:paddingBottom="10dp">
        
    	<RelativeLayout
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" 
        	android:layout_marginTop="22dp"
        	android:layout_marginBottom="10dp">

        	<TextView
            	android:id="@+id/textView2"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/choose_pic"
            	android:layout_marginTop="12dp"
            	android:layout_alignLeft="@+id/textView3"
            	android:layout_below="@+id/textView3"
            	android:textColor="@color/black"
            	android:textSize="17sp" />

        	<Button
        	    style="@style/realbutton"
            	android:id="@+id/choose_btn"
            	android:layout_marginLeft="39dp"
            	android:paddingLeft="35dp"
            	android:paddingRight="30dp"
            	android:layout_alignLeft="@+id/notebook_name"
            	android:layout_marginTop="12dp"
            	android:layout_below="@+id/notebook_name"
            	android:layout_toRightOf="@+id/textView2"
            	android:text="@string/choose"
            	android:textSize="19sp"/>

        	<EditText
        	    android:id="@+id/notebook_name"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentRight="true"
        	    android:layout_toRightOf="@+id/textView2"
        	    android:background="@drawable/edit_text_bg"
        	    android:layout_marginBottom="10dp"
        	    android:paddingLeft="8dp"
        	    android:textColor="@color/black"
        	    android:hint="请输入笔记本名"
        	    android:singleLine="true"
        	    android:textSize="17sp" />

        	<TextView
        	    android:id="@+id/textView3"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_above="@+id/choose_btn"
        	    android:layout_marginBottom="10dp"
        	    android:layout_marginLeft="20dp"
        	    android:text="@string/notebook_name"
        	    android:textColor="@color/black"
        	    android:textSize="17sp" />
        
    	</RelativeLayout>
    
    </LinearLayout>
    
    <LinearLayout
        style="@style/dialog"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:paddingBottom="10dp">

        <Button
            style="@style/realbutton"
            android:id="@+id/cancel_btn"
            android:text="@string/cancel"/>

        <Button
            style="@style/realbutton"
            android:id="@+id/add_btn"
            android:text="@string/add"/>

    </LinearLayout>

</LinearLayout>