<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    
    
    <LinearLayout 
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        
        <!--导航栏-->
    	<RelativeLayout style="@style/navigation_bar">

        	<Button
            	android:id="@+id/menu_btn"
            	style="@style/btn"
            	android:background="@drawable/menu_btn"/>

        	<LinearLayout style="@style/linearlayout_title" >
        	
        		<TextView
        	   	 	style="@style/title_text"
        	    	android:id="@+id/app_name"
        	    	android:text="@string/app_name" />

        		<TextView
        	    	style="@style/context"
        	    	android:id="@+id/app_title"
        	    	android:text="@string/search_title"/>
			
        	</LinearLayout>
        	
    	</RelativeLayout>
    	
    	<LinearLayout style="@style/background2"
    	    android:paddingTop="35dp">
    	
    	<LinearLayout style="@style/linearlayout_content"
    	    android:orientation="vertical">
    	    
    	    <LinearLayout style="@style/linearlayout_content"
    	        android:id="@+id/search_by_content"
    	        android:layout_width="match_parent"
    	        android:background="@drawable/record_btn_bg">
    	        
    	        <TextView style="@style/text"
    	            android:text="@string/search_by_content"
    	            android:textColor="@color/black"
    	            android:textSize="19sp"/>
    	        
    	    </LinearLayout>
    	    
    	    <LinearLayout style="@style/linearlayout_content"
    	        android:id="@+id/search_by_title"
    	        android:layout_width="match_parent"
    	        android:background="@drawable/record_btn_bg">
    	        
    	        <TextView style="@style/text"
    	            android:text="@string/search_by_title"
    	            android:textColor="@color/black"
    	            android:textSize="19sp"/>
    	        
    	    </LinearLayout>
    	    
    	</LinearLayout>
    		
    	</LinearLayout>
    	
	</LinearLayout>
	 
</RelativeLayout>